[gd_scene load_steps=24 format=2]

[ext_resource path="res://tiles/test_tiles.png" type="Texture" id=1]
[ext_resource path="res://actors/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://maps/test_map.gd" type="Script" id=3]
[ext_resource path="res://maps/beam.png" type="Texture" id=4]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0.0940971, 16, 0.0940971, 0.0222778, 16, 0.0222778 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0.244648, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 15.0011, 0, 15.0011 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 3, 0, 3 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 0, 16, 15.9047, 16, 15.9047, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 0, 15, 16, 15, 16, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 15, 0, 15 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 15.0011, 0, 15.0011 )

[sub_resource type="TileSet" id=14]
0/name = "test_tiles.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 1 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "test_tiles.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 3 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
3/name = "test_tiles.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 3 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "test_tiles.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 7 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "test_tiles.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 80, 0, 16, 15 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/occluder = SubResource( 9 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "test_tiles.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 96, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "test_tiles.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 112, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/occluder = SubResource( 11 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
9/name = "test_tiles.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 32, 0, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "test_tiles.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 128, 0, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0

[sub_resource type="TileSet" id=19]
0/name = "beam.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "beam.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "beam.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "beam.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 2.03807, 61.7232 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 2.03807, 19.6479 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 2.03807, 21.6506 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 2.03807, 89.9353 )

[node name="test_map" type="Node2D"]
script = ExtResource( 3 )

[node name="map" type="TileMap" parent="."]
tile_set = SubResource( 14 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65535, 4, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 19, 6, 0, 20, 6, 0, 21, 6, 0, 22, 6, 0, 23, 6, 0, 24, 6, 0, 25, 6, 0, 26, 6, 0, 27, 536870916, 0, 131071, 5, 0, 65536, 9, 0, 65537, 10, 0, 65538, 9, 0, 65539, 9, 0, 65540, 9, 0, 65541, 9, 0, 65542, 9, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 65548, 10, 0, 65549, 10, 0, 65550, 10, 0, 65551, 9, 0, 65552, 9, 0, 65553, 9, 0, 65554, 9, 0, 65555, 9, 0, 65556, 9, 0, 65557, 9, 0, 65558, 9, 0, 65559, 9, 0, 65560, 9, 0, 65561, 10, 0, 65562, 9, 0, 65563, 536870917, 0, 655359, 1, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 7, 0, 589833, 0, 0, 589834, 0, 0, 589835, 536870913, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 1, 0, 589840, 0, 0, 589841, 0, 0, 589842, 7, 0, 589843, 7, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 536870913, 0, 720895, 5, 0, 655360, 9, 0, 655361, 9, 0, 655362, 9, 0, 655363, 9, 0, 655364, 9, 0, 655365, 9, 0, 655366, 9, 0, 655367, 9, 0, 655368, 9, 0, 655369, 10, 0, 655370, 9, 0, 655371, 536870917, 0, 655375, 5, 0, 655376, 9, 0, 655377, 10, 0, 655378, 9, 0, 655379, 9, 0, 655380, 9, 0, 655381, 9, 0, 655382, 9, 0, 655383, 9, 0, 655384, 9, 0, 655385, 9, 0, 655386, 9, 0, 655387, 536870917, 0, 851976, 1, 0, 851977, 0, 0, 851978, 7, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 7, 0, 851985, 536870913, 0, 917512, 4, 0, 917513, 6, 0, 917514, 6, 0, 917515, 6, 0, 917516, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 917520, 6, 0, 917521, 536870916, 0, 983048, 4, 0, 983049, 6, 0, 983050, 6, 0, 983051, 6, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983056, 6, 0, 983057, 536870916, 0, 1048584, 5, 0, 1048585, 9, 0, 1048586, 9, 0, 1048587, 9, 0, 1048588, 9, 0, 1048589, 9, 0, 1048590, 9, 0, 1048591, 9, 0, 1048592, 9, 0, 1048593, 536870917, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 59, 59 )

[node name="beam1" type="TileMap" parent="."]
tile_set = SubResource( 19 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 131090, 1610612738, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 3, 0, 720906, 1610612738, 0, 720912, 1610612738, 0, 786442, 3, 0, 786448, 3, 0 )

[node name="beam1col" type="Node2D" parent="."]

[node name="Area2D2" type="Area2D" parent="beam1col"]
position = Vector2( 295.56, 87.0426 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam1col/Area2D2"]
shape = SubResource( 20 )

[node name="Area2D4" type="Area2D" parent="beam1col"]
position = Vector2( 167.635, 190.935 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam1col/Area2D4"]
shape = SubResource( 21 )

[node name="Area2D3" type="Area2D" parent="beam1col"]
position = Vector2( 264.017, 190.935 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam1col/Area2D3"]
shape = SubResource( 22 )

[node name="beam2" type="TileMap" parent="."]
tile_set = SubResource( 19 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 131080, 1610612738, 0, 131084, 1073741827, 0, 131085, 1073741827, 0, 131086, 1073741827, 0, 131091, 1610612738, 0, 196616, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196627, 0, 0, 262152, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262163, 0, 0, 327688, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327699, 0, 0, 393224, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393235, 0, 0, 458760, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458771, 0, 0, 524296, 3, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524307, 3, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 720905, 1073741827, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720913, 1073741827, 0, 786441, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786449, 2, 0 )

[node name="beam2col" type="Node2D" parent="."]

[node name="Area2D2" type="Area2D" parent="beam2col"]
position = Vector2( 311.582, 87.0426 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam2col/Area2D2"]
shape = SubResource( 20 )

[node name="Area2D5" type="Area2D" parent="beam2col"]
position = Vector2( 135.591, 87.0426 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam2col/Area2D5"]
shape = SubResource( 20 )

[node name="Area2D4" type="Area2D" parent="beam2col"]
position = Vector2( 151.863, 190.935 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam2col/Area2D4"]
shape = SubResource( 21 )

[node name="Area2D3" type="Area2D" parent="beam2col"]
position = Vector2( 280.039, 190.935 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam2col/Area2D3"]
shape = SubResource( 22 )

[node name="Area2D6" type="Area2D" parent="beam2col"]
position = Vector2( 231.789, 120.185 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam2col/Area2D6"]
shape = SubResource( 23 )

[node name="Area2D7" type="Area2D" parent="beam2col"]
position = Vector2( 215.789, 119.435 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam2col/Area2D7"]
shape = SubResource( 23 )

[node name="Area2D8" type="Area2D" parent="beam2col"]
position = Vector2( 199.789, 119.935 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="beam2col/Area2D8"]
shape = SubResource( 23 )
[connection signal="body_entered" from="beam1col/Area2D2" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam1col/Area2D4" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam1col/Area2D3" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam2col/Area2D2" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam2col/Area2D5" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam2col/Area2D4" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam2col/Area2D3" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam2col/Area2D6" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam2col/Area2D7" to="player" method="_on_beam_collide"]
[connection signal="body_entered" from="beam2col/Area2D8" to="player" method="_on_beam_collide"]
